target/debug/build/num-traits-91d4cebfc93ef33f/stderr
error[E0599]: no method named `to_int_unchecked` found for type `f64` in the current scope
 --> <anon>:1:40
  |
1 | pub fn probe() { let _ = unsafe { 1f64.to_int_unchecked::<i32>() }; }
  |                                        ^^^^^^^^^^^^^^^^ method not found in `f64`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
